<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_PartPresenceStatus" Id="{3a078935-3979-41fe-b912-2a1e9ca339c4}">
    <Declaration><![CDATA[TYPE ST_PartPresenceStatus :
	STRUCT
		isOn : BOOL;
	END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>